--- a/app/src/main/res/layout-land/fila_favoritos.xml
+++ b/app/src/main/res/layout-land/fila_favoritos.xml
@@ -27,46 +27,42 @@
         android:id="@+id/textViewTituloFav"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewPortadaFav"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
+        app:layout_constraintStart_toEndOf="@+id/imageViewPortadaFav"
+        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaFav" />
 
-    <Button
-        android:id="@+id/buttonQuitarFav"
-        style="@style/CustomStyleParaButton"
-        android:layout_width="102dp"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
-        android:onClick="onClickQuitar"
-        android:text="@string/Quitar"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buttonComentariosFav"
-        app:layout_constraintStart_toStartOf="@+id/buttonComentariosFav"
-        app:layout_constraintTop_toBottomOf="@+id/buttonComentariosFav"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/buttonComentariosFav"
-        style="@style/CustomStyleParaButton"
-        android:layout_width="102dp"
-        android:layout_height="wrap_content"
-        android:onClick="onClickComentarios"
-        android:text="@string/ComentariosBoton"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="5dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewPortadaFav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaFav"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaFav">
+
+        <Button
+            android:id="@+id/buttonComentariosFav"
+            style="@style/CustomStyleParaButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClickComentarios"
+            android:text="@string/ComentariosBoton"
+            android:textSize="10sp" />
+
+        <Button
+            android:id="@+id/buttonQuitarFav"
+            style="@style/CustomStyleParaButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:onClick="onClickQuitar"
+            android:text="@string/Quitar"
+            android:textSize="10sp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
