--- a/app/src/main/res/layout-land/fila_ver_mas_tarde.xml
+++ b/app/src/main/res/layout-land/fila_ver_mas_tarde.xml
@@ -14,6 +14,7 @@
         android:id="@+id/imageViewPortadaVMT"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,7 +55,7 @@
 
     <TextView
         android:id="@+id/textViewTituloFav3"
-        android:layout_width="90dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/FechaProgramada"
         android:textAlignment="center"
@@ -69,7 +70,7 @@
         style="@style/CustomStyleParaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="20dp"
         android:onClick="onClickQuitar"
         android:text="@string/Quitar"
         android:textSize="10sp"
