--- a/app/src/main/res/layout-land/fragment_pelicula_vert.xml
+++ b/app/src/main/res/layout-land/fragment_pelicula_vert.xml
@@ -8,11 +8,10 @@
 
     <ImageView
         android:id="@+id/imageViewPortadaP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/scrollViewPeliculaFragmentHoriz"
-        app:layout_constraintEnd_toStartOf="@+id/scrollViewPeliculaFragmentHoriz"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/scrollViewPeliculaFragmentHoriz"
         tools:srcCompat="@tools:sample/avatars" />
@@ -22,7 +21,7 @@
         style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="@string/InformacionPelicula"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,17 +31,16 @@
     <ScrollView
         android:id="@+id/scrollViewPeliculaFragmentHoriz"
         style="@style/CustomStyleParaScrollView"
-        android:layout_width="350dp"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.897">
+        app:layout_constraintEnd_toStartOf="@+id/textViewAnadirFavoritos"
+        app:layout_constraintStart_toEndOf="@+id/imageViewPortadaP"
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -83,7 +81,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoDuracionP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -96,17 +94,19 @@
 
             <TextView
                 android:id="@+id/textViewTextoTituloP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
                 android:text="TextView"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textViewTituloP"
                 app:layout_constraintTop_toBottomOf="@+id/imageViewPortadaP" />
 
             <TextView
                 android:id="@+id/textViewTextoGenerosP"
-                android:layout_width="270dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -130,7 +130,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoFechaP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -154,7 +154,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoIdiomaOrigP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -178,7 +178,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoIdiomaDispP"
-                android:layout_width="196dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -202,7 +202,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoPuntuacionP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -237,7 +237,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoPresupuestoP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -250,7 +250,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoIngresosP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -274,7 +274,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoProductorasP"
-                android:layout_width="247dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -300,7 +300,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoSinopsisP"
-                android:layout_width="match_parent"
+                android:layout_width="261dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="2dp"
@@ -329,11 +329,12 @@
         android:id="@+id/imageViewFavoritos"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginEnd="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/scrollViewPeliculaFragmentHoriz"
+        app:layout_constraintEnd_toEndOf="@+id/textViewAnadirFavoritos"
+        app:layout_constraintStart_toStartOf="@+id/textViewAnadirFavoritos"
         app:layout_constraintTop_toTopOf="@+id/scrollViewPeliculaFragmentHoriz"
-        app:layout_constraintVertical_bias="0.25"
+        app:layout_constraintVertical_bias="0.123"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -341,11 +342,11 @@
         style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/AñadirFavoritos"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewFavoritos"
-        app:layout_constraintStart_toStartOf="@+id/imageViewFavoritos"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewFavoritos" />
 
     <TextView
@@ -355,7 +356,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="@string/VerMasTardeP"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@+id/imageViewVerMasTarde"
         app:layout_constraintStart_toStartOf="@+id/imageViewVerMasTarde"
         app:layout_constraintTop_toBottomOf="@+id/imageViewVerMasTarde" />
