--- a/app/src/main/res/layout/fila_favoritos.xml
+++ b/app/src/main/res/layout/fila_favoritos.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:descendantFocusability="blocksDescendants"
     android:background="#7CE6E8E8"
-    >
+    android:descendantFocusability="blocksDescendants">
 
 
     <ImageView
@@ -18,52 +16,52 @@
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textViewTituloFav"
-        android:layout_width="70dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#000000"
+        android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewPortadaFav"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+        app:layout_constraintStart_toEndOf="@+id/imageViewPortadaFav"
+        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaFav" />
 
-    <Button
-        android:id="@+id/buttonQuitarFav"
-        style="@style/CustomStyleParaButton"
-        android:layout_width="102dp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:onClick="onClickQuitar"
-        android:text="@string/Quitar"
-        android:textSize="8sp"
-        app:layout_constraintEnd_toEndOf="@+id/buttonComentariosFav"
-        app:layout_constraintStart_toStartOf="@+id/buttonComentariosFav"
-        app:layout_constraintTop_toBottomOf="@+id/buttonComentariosFav" />
-
-    <Button
-        android:id="@+id/buttonComentariosFav"
-        style="@style/CustomStyleParaButton"
-        android:layout_width="102dp"
-        android:layout_height="wrap_content"
-        android:onClick="onClickComentarios"
-        android:text="@string/ComentariosBoton"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewPortadaFav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaFav"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaFav">
+
+        <Button
+            android:id="@+id/buttonComentariosFav"
+            style="@style/CustomStyleParaButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClickComentarios"
+            android:text="@string/ComentariosBoton"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/buttonQuitarFav"
+            style="@style/CustomStyleParaButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:onClick="onClickQuitar"
+            android:text="@string/Quitar"
+            android:textSize="8sp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
