Layout arreglados dependiendo de la orientación.

--- a/app/src/main/res/layout-land/activity_comentarios.xml
+++ b/app/src/main/res/layout-land/activity_comentarios.xml
@@ -54,12 +54,13 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/EscribirComentarios"
         android:inputType="textMultiLine"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonGuardarComentarios"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonGuardarComentarios"
         app:layout_constraintStart_toEndOf="@+id/imageViewPortadaC"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
