--- a/app/src/main/res/layout-land/fragment_pelicula_vert.xml
+++ b/app/src/main/res/layout-land/fragment_pelicula_vert.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageViewPortadaP"
         android:layout_width="100dp"
         android:layout_height="150dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/scrollViewPeliculaFragmentHoriz"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/scrollViewPeliculaFragmentHoriz"
@@ -55,7 +55,7 @@
                 android:text="@string/Titulo"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewPortadaP" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textViewGenerosP"
@@ -102,7 +102,7 @@
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textViewTituloP"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewPortadaP" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textViewTextoGenerosP"
@@ -343,7 +343,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/AñadirFavoritos"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
