--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,9 +18,11 @@
 
     <EditText
         android:id="@+id/editTextUsuario"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
         android:ems="10"
         android:hint="@string/NombreUsuario"
         android:inputType="textPersonName"
@@ -30,9 +32,11 @@
 
     <EditText
         android:id="@+id/editTextContraseña"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
         android:ems="10"
         android:hint="@string/Contraseña"
         android:inputType="textPassword"
