--- a/app/src/main/res/layout/activity_ver_mas_tarde.xml
+++ b/app/src/main/res/layout/activity_ver_mas_tarde.xml
@@ -20,10 +20,10 @@
 
     <ListView
         android:id="@+id/listViewVMT"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
