--- a/app/src/main/res/layout/fila_ver_mas_tarde.xml
+++ b/app/src/main/res/layout/fila_ver_mas_tarde.xml
@@ -14,9 +14,8 @@
         android:id="@+id/imageViewPortadaVMT"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +24,7 @@
 
     <TextView
         android:id="@+id/textViewFechaVMT"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="TextView"
@@ -37,7 +36,7 @@
 
     <TextView
         android:id="@+id/textViewTituloVMT"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
@@ -49,13 +48,14 @@
         app:layout_constraintEnd_toEndOf="@+id/imageViewPortadaVMT"
         app:layout_constraintStart_toStartOf="@+id/imageViewPortadaVMT"
         app:layout_constraintTop_toBottomOf="@+id/imageViewPortadaVMT"
-        app:layout_constraintVertical_bias="0.0"
-        />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewTituloFav3"
-        android:layout_width="90dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="12dp"
         android:text="@string/FechaProgramada"
         android:textAlignment="center"
         android:textSize="14sp"
@@ -69,7 +69,7 @@
         style="@style/CustomStyleParaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="10dp"
         android:onClick="onClickQuitar"
         android:text="@string/Quitar"
         android:textSize="10sp"
