--- a/app/src/main/res/layout/fragment_pelicula_horiz.xml
+++ b/app/src/main/res/layout/fragment_pelicula_horiz.xml
@@ -21,14 +21,14 @@
     <ScrollView
         android:id="@+id/scrollViewPeliculaFragmentHoriz"
         style="@style/CustomStyleParaScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="10dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageViewFavoritos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/Generos"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewTextoPuntuacionP" />
 
             <TextView
                 android:id="@+id/textViewDuracionP"
@@ -71,7 +71,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoDuracionP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -84,18 +84,20 @@
 
             <TextView
                 android:id="@+id/textViewTextoTituloP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
                 android:text="TextView"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/textView18P"
                 app:layout_constraintStart_toEndOf="@+id/textViewTituloP"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textViewTextoGenerosP"
-                android:layout_width="270dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -116,8 +118,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/textViewTextoTituloP"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -128,11 +128,11 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/FechaLanzamiento"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewDuracionP" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewTextoDuracionP" />
 
             <TextView
                 android:id="@+id/textViewTextoFechaP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -151,11 +151,11 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/IdiomaOriginal"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewTextoFechaP" />
 
             <TextView
                 android:id="@+id/textViewTextoIdiomaOrigP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -174,11 +174,11 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/IdiomasDisponibles"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewTextoIdiomaOrigP" />
 
             <TextView
                 android:id="@+id/textViewTextoIdiomaDispP"
-                android:layout_width="196dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -197,18 +197,17 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/Puntuacion"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewTituloP" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewTextoTituloP" />
 
             <TextView
                 android:id="@+id/textViewTextoPuntuacionP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="5dp"
                 android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintEnd_toStartOf="@+id/textView18P"
                 app:layout_constraintStart_toEndOf="@+id/textView12"
                 app:layout_constraintTop_toBottomOf="@+id/textViewTextoTituloP" />
 
@@ -230,11 +229,11 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/Ingresos"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewTextoPresupuestoP" />
 
             <TextView
                 android:id="@+id/textViewTextoPresupuestoP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -247,7 +246,7 @@
 
             <TextView
                 android:id="@+id/textViewTextoIngresosP"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -266,11 +265,11 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/Productoras"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewTextoIngresosP" />
 
             <TextView
                 android:id="@+id/textViewTextoProductorasP"
-                android:layout_width="247dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
@@ -283,10 +282,11 @@
 
             <TextView
                 android:id="@+id/textView20"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
                 android:text="@string/Sinopsis"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -317,10 +317,8 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintHorizontal_bias="0.759"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollViewPeliculaFragmentHoriz"
-        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -333,8 +331,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollViewPeliculaFragmentHoriz"
-        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
